Fix footer alignment & image background alignment

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@ body {
     flex-direction: column;
     min-height: 100vh;
     min-width: 100vw;
+    margin: 0;
+    padding: 0;
 }
   
 .logo {
@@ -86,8 +88,10 @@ a:active {
 }
 .soldiers {
     width: 100%;
-    position: absolute;
+    position: sticky;
+    vertical-align: bottom;
     z-index: 0;
+
 }
 
 .mision {
@@ -114,7 +118,6 @@ a:active {
     z-index: 999;
     top: 0;
     max-height: 50px;
-    
 }
 .h1mision {
     margin-left: 78%;
@@ -166,16 +169,22 @@ a:active {
     max-width: 800px;
 }
 .footer {
-        margin-top: auto;
-        width: 100%;
-        height: 2.5rem;
-        display: flex;
-        position: absolute;
-        bottom: 5px;
-        left: 0;
-        right: 70px;    
-        flex: 0;    
-        padding: center;
+  margin-top: auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 70px;
+}
+.contenedor {
+  position: relative;
+  min-height: 100vh;
+  background: url('public/soldiers.png') bottom;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 0 0;
+  width: 100%;
 }
 .logo2 {
     height: 30px;
